--- a/absence-tracker/src/main/webapp/pages/unsecure/login.xhtml
+++ b/absence-tracker/src/main/webapp/pages/unsecure/login.xhtml
@@ -16,8 +16,9 @@
 
             <p:panel id="mainPanel" styleClass="mainPanel" header="This is the login panel">
 
+
                 <f:facet name="header">
-                    <p:outputLabel id="mainLbl" value="Absence Tracker" style="float :left"/>
+                    <h:graphicImage library="images" name="ats_banner.png"/>
                 </f:facet>
 
             <p:panel id="loginPanel" styleClass="loginPanel" header="Login">
