Added Holiday Request Panel

--- a/absence-tracker/src/main/webapp/pages/secure/admin/admin.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/admin/admin.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="pageContent">
         <h:form id="adminForm" prependId="false">
 
-            <p:menubar id="adminMenu">
+            <p:menubar id="adminMenu" syleClass="adminMenu">
 
                 <p:submenu id="createMenu" label="Create">
 
