--- a/absence-tracker/src/main/webapp/pages/secure/welcome.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/welcome.xhtml
@@ -13,7 +13,7 @@
 
         <ui:define name="pageContent">
             <p:panel id="welcomePanel" styleClass="mainPanel">
-                <h2 style="color:white">Would be the Weclome Page Content</h2>
+                <h2 style="color:#0e2c54;">Would be the Welcome Page Content</h2>
             </p:panel>
         </ui:define>
 
