--- a/absence-tracker/src/main/webapp/pages/secure/secureTemplate.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/secureTemplate.xhtml
@@ -19,7 +19,7 @@
         <p:panel id="dashboardPanel" styleClass="mainPanel" header="Absence Tracker">
 
             <f:facet name="header">
-                <h:graphicImage library="images" name="ats_banner.png"/>
+                <h:graphicImage library="images" name="ats_banner2.png"/>
                 <h:form id="featuresForm" prependId="false">
                     <p:menuButton id="featuresMenu" value="#{authController.employeeDetails.fullname}" styleClass="featuresMenu">
                         <sec:authorize ifAllGranted="EMPLOYEE">
