Added Holiday Request Panel

--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
@@ -35,7 +35,7 @@
 
                     <p:separator/>
 
-                    <p:chart type="pie" model="#{holidayManagementController.holidayAllowance.pieModel}" styleClass="holidayAllowancePie"/>
+                    <p:chart type="donut" model="#{holidayManagementController.holidayAllowance.donutModel}" styleClass="holidayAllowancePie"/>
 
                 </p:panel>
 
