--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management.xhtml
@@ -11,27 +11,17 @@
             <h:panelGrid columns="3" columnClasses="alignColumnTop">
                 <p:panel id="holidayAllowancePanel" styleClass="holidayAllowancePanel" header="Holiday Balance">
 
-                    <h:panelGrid columns="2">
-
-                        <p:outputLabel id="holidayTotalLbl" for="holidayTotal" value="Total:"/>
-                        <h:outputText id="holidayTotal" value="#{holidayManagementController.holidayAllowance.total}"
-                                      style="color: black"/>
-
-                        <p:separator/>
-                        <p:separator/>
-
-                        <p:outputLabel id="holidayUsedLbl" for="holidayUsed" value="Used:"/>
-                        <h:outputText id="holidayUsed" value="#{holidayManagementController.holidayAllowance.used}"
-                                      style="color: red"/>
-
-                        <p:separator/>
-                        <p:separator/>
-
-                        <p:outputLabel id="holidayRemainingLbl" for="holidayRemaining" value="Remaining:"/>
-                        <h:outputText id="holidayRemaining"
-                                      value="#{holidayManagementController.holidayAllowance.remaining}"
-                                      style="color: green"/>
-                    </h:panelGrid>
+                        <p:dataTable id="holidayAllowanceTable" var="holidayAllowanceRow" value="#{holidayManagementController.holidayAllowanceList}">
+                            <p:column headerText="Total" styleClass="holidayTotal">
+                                <h:outputText value="#{holidayAllowanceRow.total}" />
+                            </p:column>
+                            <p:column headerText="Used" styleClass="holidayUsed">
+                                <h:outputText value="#{holidayAllowanceRow.used}" />
+                            </p:column>
+                            <p:column headerText="Remaining" styleClass="holidayRemaining">
+                                <h:outputText value="#{holidayAllowanceRow.remaining}" />
+                            </p:column>
+                        </p:dataTable>
 
                     <p:separator/>
 
